--- a/TaxCalculator.Desktop/Controls/NavigationMenuItem.axaml
+++ b/TaxCalculator.Desktop/Controls/NavigationMenuItem.axaml
@@ -45,6 +45,7 @@
         <Setter Property="Width" Value="280" />
         <Setter Property="CornerRadius" Value="8" />
         <Setter Property="Background" Value="#F2F2F2" />
+        <Setter Property="Margin" Value="0 0 0 5" />
     </Style>
     
     <Style Selector="controls|NavigationMenuItem Viewbox">
