--- a/TaxCalculator.Desktop/Views/MainWindow.axaml
+++ b/TaxCalculator.Desktop/Views/MainWindow.axaml
@@ -4,6 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:controls="using:TaxCalculator.Desktop.Controls"
+        xmlns:reactiveUi="http://reactiveui.net"
+        xmlns:desktop="clr-namespace:TaxCalculator.Desktop"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="TaxCalculator.Desktop.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
@@ -20,12 +22,20 @@
                              OpenPaneLength="300"
                              DisplayMode="Inline"
                              ItemClickCommand="{Binding MenuItemClickCommand}">
-        <controls:NavigationMenuItem Title="item"/>
-        <controls:NavigationMenuItem Title="item 2"/>
-        <controls:NavigationMenuItem Title="item 3"/>
+        <controls:NavigationMenuItem Title="Dashboard" Tag="TaxCalculator.Desktop.ViewModels.DashboardViewModel" />
+        <controls:NavigationMenuItem Title="Tax Profiles" Tag="TaxCalculator.Desktop.ViewModels.TaxProfileViewModel"/>
         <controls:NavigationView.Content>
-            <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <reactiveUi:RoutedViewHost Grid.Row="0" Router="{Binding Router}">
+                <reactiveUi:RoutedViewHost.DefaultContent>
+                    <TextBlock Text="Default content"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center" />
+                </reactiveUi:RoutedViewHost.DefaultContent>
+                <reactiveUi:RoutedViewHost.ViewLocator>
+                    <!-- See AppViewLocator.cs section below -->
+                    <desktop:AppViewLocator />
+                </reactiveUi:RoutedViewHost.ViewLocator>
+            </reactiveUi:RoutedViewHost>
         </controls:NavigationView.Content>
     </controls:NavigationView>
-   
 </Window>
