--- a/TaxCalculator.Desktop/Controls/NavigationView.axaml
+++ b/TaxCalculator.Desktop/Controls/NavigationView.axaml
@@ -29,7 +29,9 @@
                         </controls:NavigationMenu>
                     </SplitView.Pane>
                     <SplitView.Content>
-                        <ContentPresenter Content="{TemplateBinding Content}"/>
+                        <Border Classes="ContentContainer">
+                            <ContentPresenter Content="{TemplateBinding Content}"/>
+                        </Border>
                     </SplitView.Content>
                 </SplitView>
             </ControlTemplate>
@@ -38,5 +40,9 @@
     
     <Style Selector="controls|NavigationView SplitView">
         <Setter Property="PaneBackground" Value="#F2F2F2" />
+    </Style>
+    
+    <Style Selector="Border.ContentContainer">
+        <Setter Property="Padding" Value="30" />
     </Style>
 </Styles>
