begin work on the extended data grid

--- a/TaxCalculator.Desktop/App.axaml
+++ b/TaxCalculator.Desktop/App.axaml
@@ -14,5 +14,6 @@
         <StyleInclude Source="/Controls/NavigationMenuItem.axaml"/>
         <StyleInclude Source="/Controls/NavigationMenu.axaml"/>
         <StyleInclude Source="/Controls/NavigationView.axaml"/>
+        <StyleInclude Source="/Controls/DataGridExt.axaml" />
     </Application.Styles>
 </Application>
