added nested navigation and begin work on the edit tax profile view

--- a/TaxCalculator.Desktop/Views/TaxProfileView.axaml
+++ b/TaxCalculator.Desktop/Views/TaxProfileView.axaml
@@ -4,33 +4,42 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:controls="using:TaxCalculator.Desktop.Controls"
              xmlns:vm="using:TaxCalculator.Desktop.ViewModels"
+             xmlns:reactiveUi="http://reactiveui.net"
+             xmlns:desktop="clr-namespace:TaxCalculator.Desktop"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="TaxCalculator.Desktop.Views.TaxProfileView">
     
-    <Grid RowDefinitions="Auto,10,*"
-          ColumnDefinitions="Auto,*">
-        <TextBlock Text="Tax Profiles"
-                   FontSize="18" />
+	<reactiveUi:RoutedViewHost Router="{Binding Router}">
+		<reactiveUi:RoutedViewHost.DefaultContent>
+			<Grid RowDefinitions="Auto,10,*"
+			      ColumnDefinitions="Auto,*">
+				<TextBlock Text="Tax Profiles"
+				           FontSize="18" />
 
-		<StackPanel Grid.Column="1"
-					Grid.Row="0"
-					Classes="CrudActions">
+				<StackPanel Grid.Column="1"
+				            Grid.Row="0"
+				            Classes="CrudActions">
 
-			<Button Content="Edit" 
-			        Command="{Binding EditCommand, Mode=TwoWay}"/>
+					<Button Content="Edit" 
+					        Command="{Binding EditCommand, Mode=TwoWay}"/>
 			
-			<Button Content="Remove" 
-			        Command="{Binding RemoveCommand, Mode=TwoWay}"/>
+					<Button Content="Remove" 
+					        Command="{Binding RemoveCommand, Mode=TwoWay}"/>
 			
-			<Button Content="Add" />
-		</StackPanel>
+					<Button Content="Add" />
+				</StackPanel>
         
-        <controls:DataGridExt Grid.Row="2"
-                              Grid.Column="0"
-                              Grid.ColumnSpan="2"
-                              Sortable="True"
-                              ResizeableColumns="True"
-                              SelectedItem="{Binding SelectedTaxProfile, Mode=TwoWay}"
-                              Items="{Binding TaxProfiles^}" />
-    </Grid>
+				<controls:DataGridExt Grid.Row="2"
+				                      Grid.Column="0"
+				                      Grid.ColumnSpan="2"
+				                      Sortable="True"
+				                      ResizeableColumns="True"
+				                      SelectedItem="{Binding SelectedTaxProfile, Mode=TwoWay}"
+				                      Items="{Binding TaxProfiles^}" />
+			</Grid>
+		</reactiveUi:RoutedViewHost.DefaultContent>
+		<reactiveUi:RoutedViewHost.ViewLocator>
+			<desktop:AppViewLocator/>
+		</reactiveUi:RoutedViewHost.ViewLocator>
+	</reactiveUi:RoutedViewHost>
 </UserControl>
