--- a/TaxCalculator.Desktop/Views/TaxProfileEditView.axaml
+++ b/TaxCalculator.Desktop/Views/TaxProfileEditView.axaml
@@ -4,6 +4,45 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="TaxCalculator.Desktop.Views.TaxProfileEditView">
-    View And Edit TaxProfile
+    <Grid RowDefinitions="Auto,10,*,Auto"
+          ColumnDefinitions="Auto,*">
+        <TextBlock Grid.Row="0"
+                   Grid.Column="0"
+                   Text="Edit Tax Profile"
+                   VerticalAlignment="Center"
+                   FontSize="18" />
+        
+        <Button Grid.Row="0"
+                Grid.Column="1"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Center"
+                Content="Save" />
+        
+        <StackPanel Grid.Row="2"
+                    Grid.ColumnSpan="2"
+                    Grid.Column="0"
+                    Spacing="10">
+            
+            <StackPanel Spacing="-10">
+                <TextBox Text="{Binding TaxProfile.Name}" />
+                <Label Content="Name" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="16" FontSize="10" Margin="10 0 0 0" Background="#fff"/>
+            </StackPanel>
+            
+            
+            <TextBox Text="{Binding TaxProfile.Description}"
+                     AcceptsReturn="True"
+                     TextWrapping="Wrap" />
+            
+            <ComboBox Items="{Binding Currencies}"
+                      SelectedItem="{Binding SelectedCurrency, Mode=TwoWay}"
+                      Width="100">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Value}" />
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+        </StackPanel>
+    </Grid>
     
 </UserControl>
