--- a/TaxCalculator.Desktop/Views/TaxProfileView.axaml
+++ b/TaxCalculator.Desktop/Views/TaxProfileView.axaml
@@ -14,6 +14,7 @@
 			<Grid RowDefinitions="Auto,10,*"
 			      ColumnDefinitions="Auto,*">
 				<TextBlock Text="Tax Profiles"
+				           VerticalAlignment="Center"
 				           FontSize="18" />
 
 				<StackPanel Grid.Column="1"
