--- a/TaxCalculator.Desktop/Views/TaxProfileEditView.axaml
+++ b/TaxCalculator.Desktop/Views/TaxProfileEditView.axaml
@@ -2,6 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:controls="clr-namespace:TaxCalculator.Desktop.Controls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="TaxCalculator.Desktop.Views.TaxProfileEditView">
     <Grid RowDefinitions="Auto,10,*,Auto"
@@ -23,25 +24,17 @@
                     Grid.Column="0"
                     Spacing="10">
             
-            <StackPanel Spacing="-10">
-                <TextBox Text="{Binding TaxProfile.Name}" />
-                <Label Content="Name" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="16" FontSize="10" Margin="10 0 0 0" Background="#fff"/>
-            </StackPanel>
+            <controls:LabeledTextBox Text="{Binding TaxProfile.Name}"
+                                     Label="Profile Name"/>
             
+            <controls:LabeledTextBox Text="{Binding TaxProfile.Description}" 
+                                     Label="Description"
+                                     AcceptReturns="True"
+                                     TextWrapping="Wrap" />
             
-            <TextBox Text="{Binding TaxProfile.Description}"
-                     AcceptsReturn="True"
-                     TextWrapping="Wrap" />
-            
-            <ComboBox Items="{Binding Currencies}"
-                      SelectedItem="{Binding SelectedCurrency, Mode=TwoWay}"
-                      Width="100">
-                <ComboBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock Text="{Binding Value}" />
-                    </DataTemplate>
-                </ComboBox.ItemTemplate>
-            </ComboBox>
+            <controls:LabeledCombobox Items="{Binding Currencies}"
+                                      SelectedItem="{Binding SelectedCurrency, Mode=TwoWay}"
+                                      Label="Currency" />
         </StackPanel>
     </Grid>
     
